--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ venv
 db.sqlite3
 .ipynb_checkpoints
 
+# vscode 
+.vscode
+
 #tmp and similar files
 .nfs*
 *.log
@@ -41,3 +44,7 @@ tmp.py
 
 # models files
 *.dat
+
+# others 
+./medcat/config/
+./medcat/models/
