CAT-33 make publishing to test pypi depend on tests

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -33,7 +33,7 @@ jobs:
           --outdir dist/
           .
 
-      - name: Publish medcat distributions to PyPI
+      - name: Publish production distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
