--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ CAT-33 ]
   pull_request:
     branches: [ master ]
 
@@ -28,3 +28,39 @@ jobs:
       - name: Test
         run: |
           python -m unittest discover
+
+  publish-to-test-pypi:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/CAT-33'
+
+    runs-on: ubuntu-18.04
+    needs: [build]
+
+    steps:
+      - uses: actions/checkout@master
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install pypa/build
+        run: >-
+          python -m
+          pip install
+          build
+          --user
+
+      - name: Build a binary wheel and a source tarball
+        run: >-
+          python -m
+          build
+          --sdist
+          --wheel
+          --outdir dist/
+          .
+
+      - name: Publish dev distribution to Test PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
