CAT-33 user actions checkout v2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,10 @@ jobs:
     needs: [build]
 
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout master
+        uses: actions/checkout@v2
+        with:
+          ref: 'master'
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
