CAT-33 add a temporary test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@v2
         with:
-          ref: 'master'
+          ref: 'CAT-33'
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
