--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,24 +1,34 @@
-name: publish-to-pypi
+name: production
 
 on:
   push:
     branches: [ production ]
+  release:
+    types: [ published ]
 
 jobs:
   build-n-publish-to-pypi:
     runs-on: ubuntu-18.04
     concurrency: build-n-publish-to-pypi
+    if: github.repository == 'CogStack/MedCAT'
 
     steps:
       - name: Checkout production
         uses: actions/checkout@v2
         with:
           ref: 'production'
+          fetch-depth: 0
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+
+      - name: Run UATs
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-dev.txt
+          python -m unittest discover
 
       - name: Install pypa/build
         run: >-
@@ -38,6 +48,6 @@ jobs:
 
       - name: Publish production distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
