--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,18 @@ jobs:
           pip install -r requirements-dev.txt
       - name: Lint
         run: |
-          flake8 medcat --exit-zero
+          flake8 medcat
       - name: Test
         run: |
           python -m unittest discover
 
   publish-to-test-pypi:
 
-    if: github.repository == 'CogStack/MedCAT' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags') != true
+    if: |
+      github.repository == 'CogStack/MedCAT' &&
+      github.ref == 'refs/heads/master' &&
+      github.event_name == 'push' &&
+      startsWith(github.ref, 'refs/tags') != true
     runs-on: ubuntu-18.04
     needs: [build]
 
