--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ CU-2kczn9u ]
   pull_request:
     branches: [ master ]
 
@@ -27,7 +27,7 @@ jobs:
           pip install -r requirements-dev.txt
       - name: Check types
         run: |
-          python -m mypy --follow-imports=normal medcat
+          python -m mypy --follow-imports=skip medcat
       - name: Lint
         run: |
           flake8 medcat
@@ -39,7 +39,7 @@ jobs:
 
     if: |
       github.repository == 'CogStack/MedCAT' &&
-      github.ref == 'refs/heads/master' &&
+      github.ref == 'refs/heads/CU-2kczn9u' &&
       github.event_name == 'push' &&
       startsWith(github.ref, 'refs/tags') != true
     runs-on: ubuntu-18.04
@@ -50,7 +50,7 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@v2
         with:
-          ref: 'master'
+          ref: 'CU-2kczn9u'
           fetch-depth: 0
 
       - name: Set up Python 3.9
