--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, "v[0-9]+.[0-9]+.post" ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, "v[0-9]+.[0-9]+.post" ]
 
 jobs:
   build:
