--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -47,7 +47,7 @@ jobs:
           .
 
       - name: Publish production distribution to PyPI
-        if: startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'release' && github.event.release.tag_name
         uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
