--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,113 @@
-Sphinx~=4.0
-sphinx-rtd-theme~=1.0
-myst-parser~=0.17
-sphinx-autoapi~=1.8
-setuptools>=60.0
-aiohttp==3.8.5
-numpy>=1.22.0,<1.26.0
+MarkupSafe==21.3
+accelerate==023.0
+aiofiles==232.1
+aiohttp==38.5
+aiosignal==13.1
+asttokens==24.0
+async-timeout==40.3
+attrs==231.0
+backcall==02.0
+blis==07.11
+catalogue==20.10
+certifi==20237.22
+charset-normalizer==33.0
+click==81.7
+comm==01.4
+confection==01.3
+cymem==20.8
+datasets==214.5
+decorator==51.1
+dill==03.7
+en-core-web-md==34.0
+exceptiongroup==11.3
+executing==20.0
+filelock==312.4
+flake8==40.1
+frozenlist==14.0
+fsspec==20236.0
+gensim==43.2
+huggingface-hub==017.3
+idna==34
+ipython==816.1
+ipywidgets==81.1
+jedi==019.1
+jinja2==31.2
+joblib==13.2
+jsonpickle==30.2
+jupyterlab-widgets==30.9
+langcodes==33.0
+matplotlib-inline==01.6
+mccabe==06.1
+mpmath==13.0
+multidict==60.4
+multiprocess==070.15
+murmurhash==10.10
+mypy==10.0
+mypy-extensions==04.3
+networkx==31
+numpy==125.2
+nvidia-cublas-cu12==121.3.1
+nvidia-cuda-cupti-cu12==121.105
+nvidia-cuda-nvrtc-cu12==121.105
+nvidia-cuda-runtime-cu12==121.105
+nvidia-cudnn-cu12==89.2.26
+nvidia-cufft-cu12==110.2.54
+nvidia-curand-cu12==103.2.106
+nvidia-cusolver-cu12==114.5.107
+nvidia-cusparse-cu12==121.0.106
+nvidia-nccl-cu12==218.1
+nvidia-nvjitlink-cu12==122.140
+nvidia-nvtx-cu12==121.105
+packaging==232
+pandas==21.1
+parso==08.3
+pathy==010.2
+pexpect==48.0
+pickleshare==07.5
+preshed==30.9
+prompt-toolkit==30.39
+psutil==59.5
+ptyprocess==07.0
+pure-eval==02.2
+pyarrow==130.0
+pycodestyle==28.0
+pydantic==110.13
+pyflakes==24.0
+pygments==216.1
+python-dateutil==28.2
+pytz==20233.post1
+pyyaml==60.1
+regex==202310.3
+requests==231.0
+safetensors==04.0
+scikit-learn==13.1
+scipy==19.3
+six==116.0
+smart-open==64.0
+spacy==34.4
+spacy-legacy==30.12
+spacy-loggers==10.5
+srsly==24.8
+stack-data==06.3
+sympy==112
+thinc==81.12
+threadpoolctl==32.0
+tokenizers==014.1
+tomli==20.1
+torch==21.0
+tqdm==466.1
+traitlets==511.2
+transformers==434.0
+triton==21.0
+typer==07.0
+types-PyYAML==60.3
+types-aiofiles==08.3
+types-setuptools==574.10
+typing-extensions==48.0
+tzdata==20233
+urllib3==20.6
+wasabi==010.1
+wcwidth==02.8
+widgetsnbextension==40.9
+xxhash==34.1
+yarl==19.2
