--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,4 +6,4 @@ mypy-extensions==0.4.3
 types-aiofiles==0.8.3
 types-PyYAML==6.0.3
 types-setuptools==57.4.10
-spacy-legact==3.0.8
+spacy-legacy==3.0.8
