--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,6 +37,10 @@ jobs:
           build
           --user
 
+      - name: Determine if it's a pre-release
+        id: check_prerelease
+        run: echo ::set-output name=is_prerelease::${{ github.event.release.prerelease }}
+
       - name: Build a binary wheel and a source tarball
         run: >-
           python -m
@@ -44,10 +48,11 @@ jobs:
           --sdist
           --wheel
           --outdir dist/
-          .
+          ${{ steps.check_prerelease.outputs.is_prerelease == 'true' && '--pre' || '' }}
 
       - name: Publish production distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@v1.4.2
+        uses: pypa/gh-action-pypi-publish@v1.8.11
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
+          prerelease: ${{ steps.check_prerelease.outputs.is_prerelease == 'true' }}
