--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,7 @@ jobs:
 
     if: |
       github.repository == 'CogStack/MedCAT' &&
-      github.event_name == 'push' &&
-      startsWith(github.ref, 'refs/tags') != true
+      github.event_name == 'push'
     runs-on: ubuntu-20.04
     concurrency: publish-to-test-pypi
     needs: [build]
