--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
 
   publish-to-test-pypi:
 
+    if: |
+      github.repository == 'CogStack/MedCAT' &&
+      github.event_name == 'push'
     runs-on: ubuntu-20.04
     concurrency: publish-to-test-pypi
     needs: [build]
