CU-8693y13a0: Make sure to only run the deid tests on main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           flake8 medcat
       - name: Test
         run: |
-          timeout 17m python -m unittest discover
+          timeout 17m python -m unittest tests.utils.ner.test_deid.DeIDModelMultiprocessingWorks
 
   publish-to-test-pypi:
 
