--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Lint
         run: |
           flake8 medcat
+      - name: Docstring signatures
+        run: |
+          pydoctest --include-paths "medcat/**/*.py"
       - name: Test
         run: |
           timeout 17m python -m unittest discover
