CU-86948uv4g: Move to darglint

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           flake8 medcat
       - name: Docstring signatures
         run: |
-          pydoctest --include-paths "medcat/**/*.py"
+          darglint medcat/**/*.py
       - name: Test
         run: |
           timeout 17m python -m unittest discover
