--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,6 +37,10 @@ jobs:
           build
           --user
 
+      - name: Determine if it's a pre-release
+        id: check_prerelease
+        run: echo "IS_PRERELEASE=${{ github.event.release.prerelease }}" >> $GITHUB_ENV
+
       - name: Build a binary wheel and a source tarball
         run: >-
           python -m
@@ -47,7 +51,9 @@ jobs:
           .
 
       - name: Publish production distribution to PyPI
-        if: startsWith(github.ref, 'refs/tags')
+        if: |
+          startsWith(github.ref, 'refs/tags') &&
+          ${{ env.IS_PRERELEASE != 'true' }}
         uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
