--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,10 +37,6 @@ jobs:
           build
           --user
 
-      - name: Determine if it's a pre-release
-        id: check_prerelease
-        run: echo "IS_PRERELEASE=${{ github.event.release.prerelease }}" >> $GITHUB_ENV
-
       - name: Build a binary wheel and a source tarball
         run: >-
           python -m
@@ -51,9 +47,7 @@ jobs:
           .
 
       - name: Publish production distribution to PyPI
-        if: |
-          startsWith(github.ref, 'refs/tags') &&
-          ${{ env.IS_PRERELEASE != 'true' }}
+        if: startsWith(github.ref, 'refs/tags') && ! github.event.release.prerelease
         uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
