--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ production, "v[0-9]+.[0-9]+.post" ]
   release:
-    types: [ published ]
+    types: [ published , edited ]
 
 jobs:
   build-n-publish-to-pypi:
