CU-8694gzbn3: Remove timeout from unit tests in main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           flake8 medcat
       - name: Test
         run: |
-          timeout 45m python -m unittest discover
+          python -m unittest discover
 
   publish-to-test-pypi:
 
