CU-8694gzbn3: Fix test stop upon first failure (arg/option order)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           flake8 medcat
       - name: Test
         run: |
-          python -m unittest -f discover
+          python -m unittest discover -f
 
   publish-to-test-pypi:
 
