CU-8694gzbn3: Only test CDB state

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           flake8 medcat
       - name: Test
         run: |
-          timeout 45m python -m unittest discover
+          timeout 45m python -m unittest tests.utils.test_cdb_state
 
   publish-to-test-pypi:
 
