--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
           flake8 medcat
       - name: Test
         run: |
-          timeout 45m python -m unittest tests.utils.test_cdb_state tests.stats.test_kfold tests.stats.test_kfold tests.stats.test_mctexport
+          timeout 45m python -m unittest discover -s tests -p 'test_*.py' -p '!utils.test_cdb_state.py' -p '!stats.test_kfold.py' -p '!stats.test_mctexport.py'
+          timeout 45m python -m unittest tests.utils.test_cdb_state tests.stats.test_kfold tests.stats.test_kfold
 
   publish-to-test-pypi:
 
