--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           flake8 medcat
       - name: Test
         run: |
-          timeout 45m python -m unittest discover -s tests -p 'test_*.py' -p '!utils.test_cdb_state.py' -p '!stats.test_kfold.py' -p '!stats.test_mctexport.py'
+          timeout 45m python -m unittest $(git ls-files | grep '^tests/.*\.py$' | grep -v '/__init__\.py$' | grep -v 'utils/test_cdb_state.py' | grep -v 'stats/test_kfold.py' | grep -v 'stats/test_mctexport.py' | sed 's/\.py$//' | sed 's/\//./g')
           timeout 45m python -m unittest tests.utils.test_cdb_state tests.stats.test_kfold tests.stats.test_kfold
 
   publish-to-test-pypi:
