CU-8694p8y0k: Add option to remove version prefix when checking deprecation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           VERSION: ${{ steps.get_latest_release.outputs.latest_version }}
         run: |
-          python tests/check_deprecations.py "$VERSION" --next-version
+          python tests/check_deprecations.py "$VERSION" --next-version --remove-prefix
 
   publish-to-test-pypi:
 
