--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,8 @@ jobs:
             core.setOutput('latest_version', latestRelease.data.tag_name);
 
       - name: Make sure there's no deprecated methods that should be removed.
+        # only run this for master -> production PR. I.e just before doing a release.
+        if: github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'production'
         env:
           VERSION: ${{ steps.get_latest_release.outputs.latest_version }}
         run: |
