--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,15 +25,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-      - name: Check types
-        run: |
-          python -m mypy --follow-imports=normal medcat
-      - name: Lint
-        run: |
-          flake8 medcat
       - name: Test
         run: |
-          timeout 17m python -m unittest discover
+          python -m unittest tests.utils.saving.test_envsnapshot
 
   publish-to-test-pypi:
 
