--- a/.github/workflows/pydantic.yml
+++ b/.github/workflows/pydantic.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
-          pip install "pydantic==${{ matrix.pydantic-version }}"
+          pip install "pydantic${{ matrix.pydantic-version }}"
       - name: Check types for pydantic${{ matrix.pydantic-version }}
         run: |
           python -m mypy --follow-imports=normal medcat
