Add comment to GHA workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      # TODO: add cache
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
